Finish whole course translation

--- a/src/app/homepage.component.html
+++ b/src/app/homepage.component.html
@@ -536,13 +536,11 @@
             <div id="collapseOne" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingOne">
               <div class="panel-body">
                 <h4>Christian Fourdrinier</h4>
-                <h5>Objectifs:</h5>
+                <h5>{{"OBJ" | translate}}</h5>
 
-                <p>Etre en mesure de gérer rationnellement son temps, d’appliquer efficacement son organisation personnelle
-                  et son mode de fonctionnement, afin d’accroître sa performance dans la réalisation des ses activités</p>
-                <p>Etre en mesure de renforcer son efficacité professionnelle par une meilleure qualité de sa communication
-                  tant écrite qu’orale</p>
-                <p>Etre capable, in fine, de conduire à bien son projet professionnel de concert avec sa vie privée </p>
+                <p>{{"LM_OPCO_text1" | translate}}</p>
+                <p>{{"LM_OPCO_text2" | translate}}</p>
+                <p>{{"LM_OPCO_text3" | translate}}</p>
 
               </div>
             </div>
@@ -561,14 +559,11 @@
               <div class="panel-body">
 
                 <h4>Guillaume Barbier</h4>
-                <h5>Objectifs: </h5>
-                <p>Être en mesure au niveau du SI d’entreprise et en vue d’yexercer ses responsabilités</p>
-                <p>Identifier le rôle, la mission et le positionnement de la MOA</p>
-                <p>Déterminer les responsabilités respectives entre MOA et MOE</p>
-                <p>Être capable, dans le rôle d’un consultant ESN, de conduire une étude d’organisation en appui au développement
-                  de produits / services SI</p>
-
-
+                <h5>{{"OBJ" | translate}} </h5>
+                <p>{{"LM_AMOA_text1" | translate}}</p>
+                <p>{{"LM_AMOA_text2" | translate}}</p>
+                <p>{{"LM_AMOA_text3" | translate}}</p>
+                <p>{{"LM_AMOA_text4" | translate}}</p>
               </div>
             </div>
           </div>
@@ -586,12 +581,12 @@
               <div class="panel-body">
 
                 <h4>Laurence Jumeaux</h4>
-                <h5>Objectifs: </h5>
-                <p>Comprendre l’impact du digital sur les organisation DSI</p>
-                <p>Comment améliorer la performance d’une DSI</p>
-                <p>Savoir bâtir la vision cible de la fonction informatique</p>
-                <p>Evaluer le retour sur investissement des projets informatiques</p>
-                <p>Comprendre les leviers de réduction de coûts au sein d’une DSI</p>
+                <h5>{{"OBJ" | translate}} </h5>
+                <p>{{"LM_OPDI_text1" | translate}}</p>
+                <p>{{"LM_OPDI_text2" | translate}}</p>
+                <p>{{"LM_OPDI_text3" | translate}}</p>
+                <p>{{"LM_OPDI_text4" | translate}}</p>
+                <p>{{"LM_OPDI_text5" | translate}}</p>
 
 
 
@@ -611,10 +606,10 @@
             <div id="collapseFour" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingFour">
               <div class="panel-body">
                 <h4>Anne Dewilde</h4>
-                <h5>Objectifs: </h5>
-                <p>Apprendre à se connaître</p>
-                <p>Développer son savoir-être</p>
-                <p>Avoir des clés pour mieux communiquer et travailler en équipe</p>
+                <h5>{{"OBJ" | translate}} </h5>
+                <p>{{"LM_COIN_text1" | translate }}</p>
+                <p>{{"LM_COIN_text2" | translate }}</p>
+                <p>{{"LM_COIN_text3" | translate }}</p>
               </div>
             </div>
           </div>
@@ -642,11 +637,11 @@
             <div id="collapseSix" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingOne">
               <div class="panel-body">
                 <h4>Jean-Christophe Ferry et Thomas Cordival</h4>
-                <h5>Objectifs: </h5>
-                <p>Découvrir la réalité d’un SI à l’échelle</p>
-                <p>Comprendre les socles middleware qui le supporte </p>
-                <p>Comprendre la problématique d’intégration du SI</p>
-                <p>Appréhender l’innovation dans le SI</p>
+                <h5>{{"OBJ" | translate}} </h5>
+                <p>{{"LM_URSI_text1" | translate }}</p>
+                <p>{{"LM_URSI_text2" | translate }}</p>
+                <p>{{"LM_URSI_text3" | translate }}</p>
+                <p>{{"LM_URSI_text4" | translate }}</p>
               </div>
             </div>
           </div>
@@ -663,11 +658,11 @@
             <div id="collapseSeven" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingTwo">
               <div class="panel-body">
                 <h4>Charles Henry & Aurélien Legrand</h4>
-                <h5>Objectifs: </h5>
-                <p>Sensibilisation aux problématiques d’engagement des projets par les DSI</p>
-                <p>Fournir les notions de base de la construction d’une étude de ROI</p>
-                <p>Dérouler ces notions ensemble autour de cas de virtualisation d’infrastructure IT</p>
-                <p>Fournir les connaissances technologiques autour de la virtualisation</p>
+                <h5>{{"OBJ" | translate}} </h5>
+                <p>{{"LM_VIT1_text1" | translate}}</p>
+                <p>{{"LM_VIT1_text2" | translate}}</p>
+                <p>{{"LM_VIT1_text3" | translate}}</p>
+                <p>{{"LM_VIT1_text4" | translate}}</p>
               </div>
             </div>
           </div>
@@ -684,10 +679,10 @@
             <div id="collapseEight" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingThree">
               <div class="panel-body">
                 <h4>Yannick Neff</h4>
-                <h5>Objectifs: </h5>
-                <p>Valider les acquis d’une méthode d’architecture en concevant un Cloud et une application Cloud-Based</p>
-                <p>Développer les connaissances autours d’un Cloud Computing</p>
-                <p>Tester une solution de Cloud basée sur les technologies OpenSource ou propriétaires</p>
+                <h5>{{"OBJ" | translate}} </h5>
+                <p>{{"LM_ARCL_text1" | translate}}</p>
+                <p>{{"LM_ARCL_text2" | translate}}</p>
+                <p>{{"LM_ARCL_text3" | translate}}</p>
               </div>
             </div>
           </div>
@@ -704,9 +699,9 @@
             <div id="collapseNine" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingFour">
               <div class="panel-body">
                 <h4>Frédéric Fourdrinier et Yannick Neff</h4>
-                <h5>Objectifs: </h5>
-                <p>Comprendre et appliquer une démarche de « solution architecture »</p>
-                <p>Comprendre les enjeux et composants de l’infrastructure</p>
+                <h5>{{"OBJ" | translate}} </h5>
+                <p>{{"LM_SOAR_text1" | translate}}</p>
+                <p>{{"LM_SOAR_text2" | translate}}</p>
               </div>
             </div>
           </div>
@@ -752,7 +747,7 @@
             <div id="collapseEleven" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingOne">
               <div class="panel-body">
                 <h4>Lucas Boisserie</h4>
-                <h5>Objectifs: </h5>
+                <h5>{{"OBJ" | translate}} </h5>
                 <p></p>
                 <p></p>
                 <p></p>
@@ -772,10 +767,10 @@
             <div id="collapseTwelve" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingTwo">
               <div class="panel-body">
                 <h4>François Chazal et Issame El Kharbili</h4>
-                <h5>Objectifs: </h5>
-                <p>Connaissance générale des problématiques de productivité des développements</p>
-                <p>Expérimentation d’outils associés aux méthodes agiles de cadrage et développement</p>
-                <p>Confrontation aux problématiques de tout projet telles que reprioriosation et silver bullet</p>
+                <h5>{{"OBJ" | translate}} </h5>
+                <p>{{"LM_MEPA_text1" | translate}}</p>
+                <p>{{"LM_MEPA_text2" | translate}}</p>
+                <p>{{"LM_MEPA_text3" | translate}}</p>
               </div>
             </div>
           </div>
@@ -792,36 +787,16 @@
             <div id="collapseThirteen" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingThree">
               <div class="panel-body">
                 <h4>Robin Duval</h4>
-                <h5>Objectifs: </h5>
-                <p>Aide pour les autres matières SIGL</p>
-                <p>Intégration en entreprise</p>
-                <p>Réussite certains tests d’admissions </p>
-                <p>Effectuer une démarche</p>
+                <h5>{{"OBJ" | translate}} </h5>
+                <p>{{"LM_ACOO_text1" | translate}}</p>
+                <p>{{"LM_ACOO_text2" | translate}}</p>
+                <p>{{"LM_ACOO_text3" | translate}}</p>
+                <p>{{"LM_ACOO_text4" | translate}}</p>
               </div>
             </div>
           </div>
           <!-- /.collapse-3 -->
-          <div class="panel panel-default">
-            <div class="panel-heading" role="tab" id="headingFour">
-              <h4 class="panel-title">
-                <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseFourteen" aria-expanded="false"
-                  aria-controls="collapseFourteen">
-                                            {{ "LM_ACOO" | translate}}
-                                        </a>
-              </h4>
-            </div>
-            <div id="collapseFourteen" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingFour">
-              <div class="panel-body">
-                <h4>Robin Duval</h4>
-                <h5>Objectifs: </h5>
-                <p>Avoir une culture des nouveaux langages et frameworks</p>
-                <p>Intégration en entreprise</p>
-                <p>Effectuer une démarche de comparaison et d’analyse</p>
 
-              </div>
-            </div>
-          </div>
-          <!-- /.collapse-4 -->
           <div class="panel panel-default">
             <div class="panel-heading" role="tab" id="headingFive">
               <h4 class="panel-title">
@@ -834,9 +809,9 @@
             <div id="collapseFiveteen" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingFive">
               <div class="panel-body">
                 <h4>Lucas Boisserie</h4>
-                <h5>Objectifs: </h5>
-                <p>Connaître la valeur ajoutée du DevOps par rapport à une méthodologie plus classique</p>
-                <p>Comprendre comment transformer une organisation projet vers le DevOps</p>
+                <h5>{{"OBJ" | translate}} </h5>
+                <p>{{"LM_DEVO_text1" | translate }}</p>
+                <p>{{"LM_DEVO_text2" | translate }}</p>
               </div>
             </div>
           </div>
@@ -863,9 +838,9 @@
             <div id="collapseSixteen" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingOne">
               <div class="panel-body">
                 <h4>Antoine Tallon</h4>
-                <h5>Objectifs: </h5>
-                <p>Comprendre les enjeux d’une transformation</p>
-                <p>Comprendre les bases de la conduite du changement</p>
+                <h5>{{"OBJ" | translate}} </h5>
+                <p>{{"LM_ACCC_text1" | translate}}</p>
+                <p>{{"LM_ACCC_text2" | translate}}</p>
               </div>
             </div>
           </div>
@@ -883,9 +858,9 @@
               <div class="panel-body">
 
                 <h4>Antoine Tallon</h4>
-                <h5>Objectifs: </h5>
-                <p>Savoir utiliser les méthodes d’innovation et de créativité pour la résolution de problèmes business</p>
-                <p>Appliquer la méthode à un cas business réel</p>
+                <h5>{{"OBJ" | translate}} </h5>
+                <p>{{"LM_INNO_text1" | translate}}</p>
+                <p>{{"LM_INNO_text2" | translate}}</p>
               </div>
             </div>
           </div>
@@ -902,10 +877,10 @@
             <div id="collapseEighteen" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingThree">
               <div class="panel-body">
                 <h4>Julien Guisset</h4>
-                <h5>Objectifs: </h5>
-                <p>Aborder les difficultés par dichotomie</p>
-                <p>Identifier des solutions concrêtes</p>
-                <p>Délivrer une mission de conseil</p>
+                <h5>{{"OBJ" | translate}} </h5>
+                <p>{{"LM_PMDE_text1" | translate}}</p>
+                <p>{{"LM_PMDE_text2" | translate}}</p>
+                <p>{{"LM_PMDE_text3" | translate}}</p>
               </div>
             </div>
           </div>
@@ -922,17 +897,10 @@
             <div id="collapseNineteen" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingFour">
               <div class="panel-body">
                 <h4>Julien Guisset</h4>
-                <h5>Objectifs: </h5>
-                <p>Autour de mon expérience dans le marché de l'art avec le développement des ventes Live en direct sur Internet.
-                  Je montre comment la digitalisation d'une industrie pré-existante dans le monde physique, en l’occurrence
-                  le marché de l'art et les ventes aux enchères publiques, est un mix entre innovation et transformation.</p>
-                <p>J'aborde le sujet sous différents angles. Celui du média Interencheres et celui des commissairespriseurs.
-                  Je tisse des parallèles avec le ecommerce et les industries de la distribution et du commerce.
-                </p>
-                <p>Un cours qui matérialise la différence entre innovation et transformation, qui propose une approche par phase
-                  de la digitalisation d'une industrie pré-existante au web. Qui esquisse des pistes pour réussir la conduite
-                  du changement. Qui montre la nécessité de procéder d'une vision à long-terme sans pour autant traîner en
-                  chemin quand les pure-players de l'Internet sont à l’affût</p>
+                <h5>{{"OBJ" | translate}} </h5>
+                <p>{{"LM_DIGI_text1" | translate}}</p>
+                <p>{{"LM_DIGI_text2" | translate}}</p>
+                <p>{{"LM_DIGI_text3" | translate}}</p>
               </div>
             </div>
           </div>
@@ -952,11 +920,10 @@
             <div id="collapseTwenty" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingFive">
               <div class="panel-body">
                 <h4></h4>
-                <h5>Objectifs: </h5>
-                <p>Discuter du modèle financier et technologique autour du Cloud</p>
-                <p>Appréhender une démarche non sollicité chez un client tirée par l’attrait du Business Case</p>
-                <p>Appréhender une démarche de consulting de haut niveau chez un client avec démarche de transformation globale
-                  à grande échelle</p>
+                <h5>{{"OBJ" | translate}} </h5>
+                <p>{{"LM_VIT2_text1" | translate}}</p>
+                <p>{{"LM_VIT2_text2" | translate}}</p>
+                <p>{{"LM_VIT2_text3" | translate}}</p>
               </div>
             </div>
           </div>
@@ -974,10 +941,10 @@
             <div id="collapseTwentyOne" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingSix">
               <div class="panel-body">
                 <h4>Hervé Durand</h4>
-                <h5>Objectifs: </h5>
-                <p>Apprentissage de méthodes de développement</p>
-                <p>Formation aux modèles conceptuels sous tendus à ces méthodes</p>
-                <p>Mise en situation</p>
+                <h5>{{"OBJ" | translate}} </h5>
+                <p>{{"LM_METH_text1" | translate}}</p>
+                <p>{{"LM_METH_text2" | translate}}</p>
+                <p>{{"LM_METH_text3" | translate}}</p>
               </div>
             </div>
           </div>
@@ -994,10 +961,10 @@
             <div id="collapseTwentyTwo" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingSeven">
               <div class="panel-body">
                 <h4>Frédéric Fourdrinier et Hervé Durand</h4>
-                <h5>Objectifs: </h5>
-                <p>Comprendre et maîtriser l’évolution et les tendances du marché informatique. </p>
-                <p>Répondre à une problématique d’Enterprise par la mise en oeuvre d’une solution à base d’IoT</p>
-                <p>Développer des compétences en synthèse, analyse et innovation</p>
+                <h5>{{"OBJ" | translate}} </h5>
+                <p>{{"LM_PERS_text1" | translate}} </p>
+                <p>{{"LM_PERS_text2" | translate}}</p>
+                <p>{{"LM_PERS_text3" | translate}}</p>
               </div>
             </div>
           </div>
