change contact and report bug button css

--- a/src/app/homepage.component.html
+++ b/src/app/homepage.component.html
@@ -1007,10 +1007,8 @@
           <article class="tiles">
             <div class="">
               <!-- class pic pour surligner 'image et proposition read more-->
-              <img src="assets/images/blog/technique.jpg" alt="blog">
-              <ul class="more">
-                <li><a href="blog-single-post-image.html">Read More</a></li>
-              </ul>
+              <img src="assets/images/blog/new/technique.jpg" alt="blog">
+            
             </div>
             <!-- /.pic -->
             <div class="tiles-content">
@@ -1037,10 +1035,8 @@
           <article class="tiles">
             <div class="">
               <!-- class pic pour surligner 'image et proposition read more-->
-              <img src="assets/images/blog/commercial.jpg" alt="blog">
-              <ul class="more">
-                <li><a href="blog-single-post-image.html">Read More</a></li>
-              </ul>
+              <img src="assets/images/blog/new/commercial.jpg" alt="blog">
+              
             </div>
             <!-- /.pic -->
             <div class="tiles-content">
@@ -1069,10 +1065,8 @@
           <article class="tiles">
             <div class="">
               <!-- class pic pour surligner 'image et proposition read more-->
-              <img src="assets/images/blog/organisation.jpg" alt="blog">
-              <ul class="more">
-                <li><a href="blog-single-post-image.html">Read More</a></li>
-              </ul>
+              <img src="assets/images/blog/new/organisation.jpg" alt="blog">
+              
             </div>
             <!-- /.pic -->
             <div class="tiles-content">
@@ -1098,7 +1092,7 @@
           <article class="tiles">
             <div class="">
               <!-- class pic pour surligner 'image et proposition read more-->
-              <img src="assets/images/blog/pluriel.jpg" alt="blog">
+              <img src="assets/images/blog/new/pluriel.jpg" alt="blog">
               <ul class="more">
                 <li><a href="blog-single-post-image.html">Read More</a></li>
               </ul>
@@ -1141,19 +1135,38 @@
       </div>
       <hr class="hr-title-01 hr-icon">
 
+      <div class="col-md-3"></div>
       <div class="col-md-6">
         <a class="twitter-timeline" data-height="500" href="https://twitter.com/SIGL_EPITA">Tweets by SIGL_EPITA</a>
       </div>
-      <div class="col-md-6">
-        <a href="#" class="dark-btn"> <i class="fa fa-facebook"></i>             {{"Facebook" | translate}}</a>
-      </div>
-      <div class="col-md-6">
-        <a href="mailto:laboratoire.sigl@epita.fr" class="gradient-btn">
-                                <span>{{"Contact" | translate}}</span>
-                    </a>
+      <div class="col-md-3"></div>
+      
       </div>
 
+
+      <div class="row">
+  
+
+          <div class="col-md-4">
+              <a href="https://github.com/dev-sigl/site-vitrine/issues/new" class="dark-btn"> <i class="fa fa-github"></i> &emsp; {{ 'githubIssue' | translate}}</a>
+          </div>
+
+          <div class="col-md-4">
+              <a href="https://www.facebook.com/SIGL.EPITA/" class="dark-btn"> <i class="fa fa-facebook"></i> &emsp;{{"Facebook" | translate}}</a>
+          </div>
+     
+          
+         
+
+          <div class="col-md-4">  
+              <a href="mailto:laboratoire.sigl@epita.fr" class="dark-btn"> <i class="fa fa-address-book"></i> &emsp;{{"Contact" | translate}}</a>
+          </div>
+
+        
+      
     </div>
+
+  
 
   </div>
 </section>
@@ -1262,16 +1275,16 @@
 <!-- footer -->
 
 <footer class="footer">
-
+<!--
   <div class="container">
     <div class="row">
       <div class="col-lg-3 center">
-        <a target="_blanck" type="button" href="https://github.com/laboratoire-sigl/site-vitrine/issues/new" class="btn btn-default btn-xs "> {{ 'githubIssue' | translate}}</a>
+        <a target="_blanck" type="button" href="https://github.com/dev-sigl/site-vitrine/issues/new" class="btn btn-default btn-xs "> {{ 'githubIssue' | translate}}</a>
 
       </div>
     </div>
   </div>
-
+-->
 
   <!-- /.container -->
   <a href="#" class="go-top"><i class="fa fa-angle-up"></i></a>
