fill footer with assos labo and majors

--- a/src/app/homepage.component.html
+++ b/src/app/homepage.component.html
@@ -1275,45 +1275,46 @@
 <!-- footer -->
 
 <footer>
-  <div class="footer" id="footer">toto
+  <div class="footer" id="footer">
       <div class="container">
           <div class="row">
-              <div class="col-lg-2  col-md-2 col-sm-4 col-xs-6">
-                  <h3> Lorem Ipsum </h3>
+              <div class="col-lg-3  col-md-3 col-sm-6 col-xs-12">
+                  <h3> Les majeures</h3>
                   <ul>
-                      <li> <a href="#"> Lorem Ipsum </a> </li>
-                      <li> <a href="#"> Lorem Ipsum </a> </li>
-                      <li> <a href="#"> Lorem Ipsum </a> </li>
-                      <li> <a href="#"> Lorem Ipsum </a> </li>
+                      <li> <a href="http://www.epita.fr/cursus-cycle-ingenieur-majeures.aspx"> MTI (Multimédia et Technologies de l'Information) </a> </li>
+                      <li> <a href="http://www.epita.fr/cursus-cycle-ingenieur-majeures.aspx"> Recherche CSI (Calcul Scientifique et Image) </a> </li>
+                      <li> <a href="https://srs.epita.fr"> SRS (Systèmes, Réseaux et Sécurité) </a> </li>
+                      <li> <a href="http://www.epita.fr/cursus-cycle-ingenieur-majeures.aspx"> GISTRE (Génie Informatique des Systèmes Temps Réel et Embarqués) </a> </li>
                   </ul>
               </div>
-              <div class="col-lg-2  col-md-2 col-sm-4 col-xs-6">
-                  <h3> Lorem Ipsum </h3>
+              <div class="col-lg-3  col-md-3 col-sm-6 col-xs-12">
+                <h3> &emsp; </h3>
                   <ul>
-                      <li> <a href="#"> Lorem Ipsum </a> </li>
-                      <li> <a href="#"> Lorem Ipsum </a> </li>
-                      <li> <a href="#"> Lorem Ipsum </a> </li>
-                      <li> <a href="#"> Lorem Ipsum </a> </li>
+                      <li> <a href="https://tcom.epita.fr/fr/"> TCOM (Télécommunications) </a> </li>
+                      <li> <a href="https://sigl.epita.fr"> SIGL (Systèmes d'Information et Génie Logiciel) </a> </li>
+                      <li> <a href="http://www.epita.fr/cursus-cycle-ingenieur-majeures.aspx"> GITM (Global IT Management) </a> </li>
+                      <li> <a href="http://www.epita.fr/cursus-cycle-ingenieur-majeures.aspx"> SCIA (Sciences Cognitives et Informatique Avancée) </a> </li>
                   </ul>
               </div>
-              <div class="col-lg-2  col-md-2 col-sm-4 col-xs-6">
-                  <h3> Lorem Ipsum </h3>
+              <div class="col-lg-3  col-md-3 col-sm-6 col-xs-12">
+                  <h3> Laboratoires et assos</h3>
                   <ul>
-                      <li> <a href="#"> Lorem Ipsum </a> </li>
-                      <li> <a href="#"> Lorem Ipsum </a> </li>
-                      <li> <a href="#"> Lorem Ipsum </a> </li>
-                      <li> <a href="#"> Lorem Ipsum </a> </li>
+                      <li> <a href="https://www.3ie.fr"> Institut d’Innovation Informatique de l’EPITA </a> </li>
+                      <li> <a href="https://www.lrde.epita.fr/wiki/Main_Page"> EPITA Research & Development Laboratory (LRDE) </a> </li>
+                      <li> <a href="https://www.lse.epita.fr"> Laboratoire Système d'EPITA (LSE) </a> </li>
+                     
                   </ul>
               </div>
-              <div class="col-lg-2  col-md-2 col-sm-4 col-xs-6">
-                  <h3> Lorem Ipsum </h3>
+              <div class="col-lg-3  col-md-3 col-sm-6 col-xs-12">
+                  <h3> &emsp; </h3>
                   <ul>
-                      <li> <a href="#"> Lorem Ipsum </a> </li>
-                      <li> <a href="#"> Lorem Ipsum </a> </li>
-                      <li> <a href="#"> Lorem Ipsum </a> </li>
-                      <li> <a href="#"> Lorem Ipsum </a> </li>
+                      <li> <a href="http://www.epita.fr/entreprises-association.aspx"> <li> <a href="http://www.epita.fr/entreprises-association.aspx"> Lorem Ipsum </a> </li> </a> </li>
+                      <li> <a href="http://www.epiworld.org/"> Epiworld </a> </li>
+                      <li> <a href="http://blogs.ionis-group.com/epita/2016/03/episport-association-ecoles-groupe-ionis-sport-2016.html"> Episport</a> </li>
+                      <li> <a href="http://www.epita.fr/vie-etudiante-associations.aspx">Toutes les autres assos</a> </li>
                   </ul>
               </div>
+              <!--
               <div class="col-lg-3  col-md-3 col-sm-6 col-xs-12 ">
                   <h3> Lorem Ipsum </h3>
                   <ul>
@@ -1331,7 +1332,7 @@
                       <li> <a href="#"> <i class="fa fa-pinterest">   </i> </a> </li>
                       <li> <a href="#"> <i class="fa fa-youtube">   </i> </a> </li>
                   </ul>
-              </div>
+              </div>-->
           </div>
           <!--/.row--> 
       </div>
@@ -1339,19 +1340,7 @@
   </div>
   <!--/.footer-->
   
-  <div class="footer-bottom">
-      <div class="container">
-          <p class="pull-left"> Copyright © Footer 2014. All right reserved. </p>
-          <div class="pull-right">
-              <ul class="nav nav-pills payments">
-                  <li><i class="fa fa-cc-visa"></i></li>
-                  <li><i class="fa fa-cc-mastercard"></i></li>
-                  <li><i class="fa fa-cc-amex"></i></li>
-                  <li><i class="fa fa-cc-paypal"></i></li>
-              </ul> 
-          </div>
-      </div>
-  </div>
+ 
   <!--/.footer-bottom--> 
 </footer>
 <!-- /.footer -->
