change footer title

--- a/src/app/homepage.component.html
+++ b/src/app/homepage.component.html
@@ -1297,7 +1297,7 @@
                   </ul>
               </div>
               <div class="col-lg-3  col-md-3 col-sm-6 col-xs-12">
-                  <h3> Laboratoires et assos</h3>
+                  <h3> Laboratoires </h3>
                   <ul>
                       <li> <a href="https://www.3ie.fr"> Institut d’Innovation Informatique de l’EPITA </a> </li>
                       <li> <a href="https://www.lrde.epita.fr/wiki/Main_Page"> EPITA Research & Development Laboratory (LRDE) </a> </li>
@@ -1306,12 +1306,12 @@
                   </ul>
               </div>
               <div class="col-lg-3  col-md-3 col-sm-6 col-xs-12">
-                  <h3> &emsp; </h3>
+                  <h3> Associations </h3>
                   <ul>
-                      <li> <a href="http://www.epita.fr/entreprises-association.aspx"> <li> <a href="http://www.epita.fr/entreprises-association.aspx"> Lorem Ipsum </a> </li> </a> </li>
+                      <li> <a href="http://www.epita.fr/entreprises-association.aspx"> <li> <a href="http://www.epita.fr/entreprises-association.aspx"> Cristal </a> </li> </a> </li>
                       <li> <a href="http://www.epiworld.org/"> Epiworld </a> </li>
                       <li> <a href="http://blogs.ionis-group.com/epita/2016/03/episport-association-ecoles-groupe-ionis-sport-2016.html"> Episport</a> </li>
-                      <li> <a href="http://www.epita.fr/vie-etudiante-associations.aspx">Toutes les autres assos</a> </li>
+                      <li> <a href="http://www.epita.fr/vie-etudiante-associations.aspx">Toutes les autres assosiations</a> </li>
                   </ul>
               </div>
               <!--
