--- a/src/app/homepage.component.html
+++ b/src/app/homepage.component.html
@@ -426,7 +426,7 @@
               <span><img src="assets/images/assetProject/pae.jpg" width="70" height="70"/></span>
             </div>
             <div class="info">
-              <h4 class="text-center">Product & Experiment</h4>
+              <h4 class="text-center">Practice & Experiment</h4>
               <p>
                 {{"PAEText" | translate}}
               </p>
