Reduce images size to better fit the other content, Add traduction for footer and redesign it

--- a/src/app/homepage.component.html
+++ b/src/app/homepage.component.html
@@ -1065,7 +1065,7 @@
           <article class="tiles">
             <div class="">
               <!-- class pic pour surligner 'image et proposition read more-->
-              <img src="assets/images/blog/new/organisation.jpg" alt="blog">
+              <img src="assets/images/blog/new/organisation.jpg" height="175px" alt="blog">
               
             </div>
             <!-- /.pic -->
@@ -1092,7 +1092,7 @@
           <article class="tiles">
             <div class="">
               <!-- class pic pour surligner 'image et proposition read more-->
-              <img src="assets/images/blog/new/pluriel.jpg" alt="blog">
+              <img src="assets/images/blog/new/pluriel.jpg" height="175px" alt="blog">
               <ul class="more">
                 <li><a href="blog-single-post-image.html">Read More</a></li>
               </ul>
@@ -1146,8 +1146,7 @@
 
       <div class="row">
   
-
-          <div class="col-md-4">
+          <div class="col-md-4 text-center">
               <a href="https://github.com/dev-sigl/site-vitrine/issues/new" class="dark-btn"> <i class="fa fa-github"></i> &emsp; {{ 'githubIssue' | translate}}</a>
           </div>
 
@@ -1155,19 +1154,11 @@
               <a href="https://www.facebook.com/SIGL.EPITA/" class="dark-btn"> <i class="fa fa-facebook"></i> &emsp;{{"Facebook" | translate}}</a>
           </div>
      
-          
-         
-
           <div class="col-md-4">  
               <a href="mailto:laboratoire.sigl@epita.fr" class="dark-btn"> <i class="fa fa-address-book"></i> &emsp;{{"Contact" | translate}}</a>
           </div>
-
-        
-      
+   
     </div>
-
-  
-
   </div>
 </section>
 
@@ -1275,33 +1266,33 @@
 <!-- footer -->
 
 <footer>
-  <div class="footer" id="footer">
+  <div class="panel panel-default" id="footer">
       <div class="container">
           <div class="row">
               <div class="col-lg-3  col-md-3 col-sm-6 col-xs-12">
                   <h3> Les majeures</h3>
                   <ul>
-                      <li> <a href="http://www.epita.fr/cursus-cycle-ingenieur-majeures.aspx"> MTI (Multimédia et Technologies de l'Information) </a> </li>
-                      <li> <a href="http://www.epita.fr/cursus-cycle-ingenieur-majeures.aspx"> Recherche CSI (Calcul Scientifique et Image) </a> </li>
-                      <li> <a href="https://srs.epita.fr"> SRS (Systèmes, Réseaux et Sécurité) </a> </li>
-                      <li> <a href="http://www.epita.fr/cursus-cycle-ingenieur-majeures.aspx"> GISTRE (Génie Informatique des Systèmes Temps Réel et Embarqués) </a> </li>
+                      <li> <a href="http://www.epita.fr/cursus-cycle-ingenieur-majeures.aspx">{{"MTI" | translate}}</a> </li>
+                      <li> <a href="http://www.epita.fr/cursus-cycle-ingenieur-majeures.aspx">{{"CSI" | translate}} </a> </li>
+                      <li> <a href="https://srs.epita.fr">  </a> </li>
+                      <li> <a href="http://www.epita.fr/cursus-cycle-ingenieur-majeures.aspx"> {{"SRS" | translate}}</a> </li>
                   </ul>
               </div>
               <div class="col-lg-3  col-md-3 col-sm-6 col-xs-12">
                 <h3> &emsp; </h3>
                   <ul>
-                      <li> <a href="https://tcom.epita.fr/fr/"> TCOM (Télécommunications) </a> </li>
-                      <li> <a href="https://sigl.epita.fr"> SIGL (Systèmes d'Information et Génie Logiciel) </a> </li>
-                      <li> <a href="http://www.epita.fr/cursus-cycle-ingenieur-majeures.aspx"> GITM (Global IT Management) </a> </li>
-                      <li> <a href="http://www.epita.fr/cursus-cycle-ingenieur-majeures.aspx"> SCIA (Sciences Cognitives et Informatique Avancée) </a> </li>
+                      <li> <a href="https://tcom.epita.fr/fr/">{{"TCOM" | translate}} </a>  </li>
+                      <li> <a href="https://sigl.epita.fr">{{"SIGLM" | translate}}</a>  </li>
+                      <li> <a href="http://www.epita.fr/cursus-cycle-ingenieur-majeures.aspx">{{"GITM" | translate}}</a>  </li>
+                      <li> <a href="http://www.epita.fr/cursus-cycle-ingenieur-majeures.aspx"> {{"SCIA" | translate}} </a> </li>
                   </ul>
               </div>
               <div class="col-lg-3  col-md-3 col-sm-6 col-xs-12">
                   <h3> Laboratoires </h3>
                   <ul>
-                      <li> <a href="https://www.3ie.fr"> Institut d’Innovation Informatique de l’EPITA </a> </li>
-                      <li> <a href="https://www.lrde.epita.fr/wiki/Main_Page"> EPITA Research & Development Laboratory (LRDE) </a> </li>
-                      <li> <a href="https://www.lse.epita.fr"> Laboratoire Système d'EPITA (LSE) </a> </li>
+                      <li> <a href="https://www.3ie.fr">{{"3IE" | translate}} </a> </li>
+                      <li> <a href="https://www.lrde.epita.fr/wiki/Main_Page"> {{"LRDE" | translate}} </a> </li>
+                      <li> <a href="https://www.lse.epita.fr"> {{"LSE" | translate}}</a> </li>
                      
                   </ul>
               </div>
@@ -1311,7 +1302,7 @@
                       <li> <a href="http://www.epita.fr/entreprises-association.aspx"> <li> <a href="http://www.epita.fr/entreprises-association.aspx"> Cristal </a> </li> </a> </li>
                       <li> <a href="http://www.epiworld.org/"> Epiworld </a> </li>
                       <li> <a href="http://blogs.ionis-group.com/epita/2016/03/episport-association-ecoles-groupe-ionis-sport-2016.html"> Episport</a> </li>
-                      <li> <a href="http://www.epita.fr/vie-etudiante-associations.aspx">Toutes les autres assosiations</a> </li>
+                      <li> <a href="http://www.epita.fr/vie-etudiante-associations.aspx">{{"OtherAsso" | translate}}</a> </li>
                   </ul>
               </div>
               <!--
