Resolve css bug in english

--- a/src/app/homepage.component.html
+++ b/src/app/homepage.component.html
@@ -374,7 +374,7 @@
 <!-- Project page -->
 <section id="features" class="features white-bg">
   <div class="container">
-    <div class="row features">
+    <div class="features">
       <div class="section-title">
         <h2>{{"Proj" | translate}}</h2>
       </div>
@@ -487,13 +487,13 @@
           </div>
         </div>
 
-        <div class="col-xs-12 col-md-3">
+        <div class="col-xs-12 col-md-4">
           <div class="box">
             <div style="margin: 20px;" data-os-animation="fadeInDown">
               <span><img src="assets/images/assetProject/architecture.png" width="70" height="70"/></span>
             </div>
             <div class="info">
-              <h4 class="text-center">Architecture</h4>
+              <h4 class="text-center">{{"ARCH" | translate}}</h4>
               <p>
                 {{"ARCHText" | translate}}
               </p>
